# rpi-rgb-led-matrix

./: .gitignore  base_setup.sh  pyproject.toml  restart_server.sh  run_server.sh  setup.sh
.claude/: settings.local.json
bindings/python/: .cache  create_app.py  main.py  pyproject.toml  reset_local.sh  reset_runlocal.sh  run_webserver.sh
bindings/python/custom_displays/: blank.py  runtext.py  samplebase.py  song_scroller1.py  song_scroller2.py  spotify.py  wave1.py
bindings/python/samples/: '  ]  image-draw.py  image-viewer.py  samplebase.py
examples-api-use/: input-example  pixel-mover
lib/: Makefile
server/: app.py  config.py  display.py
server/displays/: spotify.py  spotify_auth.py  wave1.py
