[project]
name = "pixel-display"
version = "0.1.0"
description = "API server for controlling an RGB LED matrix display on Raspberry Pi"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.2",
    "uvicorn[standard]>=0.41.0",
    "spotipy>=2.24",
    "Pillow>=10.0",
    "requests>=2.31",
    "cachetools>=5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
