[tool.poetry]
name = "pixel-display"
version = "0.1.0"
description = "Cool pixel display"
authors = ["Tyler Peterson"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
pydantic = "^1.7.3"
uvicorn = "^0.13.3"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
